<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/ic_baseline_login_24"
        android:title="@string/title_otp" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/title_update" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_sharp_settings_241"
        android:title="@string/title_preferences" />
</menu>