<?xml version="1.0" encoding="utf-8"?>
<!--XML implementation of Card Layout-->
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/idSlno"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/slno"
            android:textAlignment="textStart" />
        <TextView
            android:id="@+id/idUsed"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/IDUseed"
            android:textAlignment="textStart" />
        <TextView
            android:id="@+id/idAuthModality"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/authModality"
            android:textAlignment="textStart" />
        <TextView
            android:id="@+id/idAgo"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/timeAgo"
            android:textAlignment="textStart" />

    </LinearLayout>

</androidx.cardview.widget.CardView>

